--- a/app/views/news/articles/_the_truth_about_custom_saddles.haml
+++ b/app/views/news/articles/_the_truth_about_custom_saddles.haml
@@ -7,9 +7,10 @@
   The Custom Process
 
 %p
-  I've purchased two custom saddles from high-end companies with reputable fitters. The result? I ended up with two saddles that didn't fit. The original fitters may or may not have been at fault -- after all the saddles were constructed with nothing but measurements from an agent of the company. Once the saddles were mailed to the agent, they made adjustments and spoke positively about the fit. But even a layman with a good article on saddle fit could see problems -- and when I brought in independent fitters they indicated the saddles were not a good fit. Ultimately, I sold the custom saddles at a significant loss.  
-%p
-  I'm not alone in this experience -- many people have related similar stories. Experienced horse people always say "try before you buy".
+  I've purchased two custom saddles from high-end companies with reputable fitters. The result? I ended up with two saddles that didn't fit. The original fitters may or may not have been at fault -- after all the saddles were constructed with nothing but measurements from an agent of the company. Once the saddles were mailed to the agent, they made adjustments and spoke positively about the fit. But even a layman with a good article on saddle fit could see problems -- and when I brought in independent fitters they indicated the saddles were not a good fit. Ultimately, I sold the custom saddles at a significant loss. I'm not alone in this experience -- many people have related similar stories. 
+
+%p 
+  Experienced horse people always advise me not to buy a saddle I can't try first.
 %em
   Gee, now that I write it, it sounds  kind of obvious doesn't it?
 %p
