--- a/app/views/layouts/_global_header.haml
+++ b/app/views/layouts/_global_header.haml
@@ -32,7 +32,18 @@
     %md-tabs.md-hue-1.secondary-toolbar.md-no-tab-content
       %md-tab
         = link_to "All Disciplines", search_path
-      - Discipline.find_each do |d| 
-        %md-tab
-          = link_to d.name, discipline_path(d)
-
+      %md-tab
+        %a{href: "/hunter-jumper"}
+          Hunter-Jumper
+      %md-tab
+        %a{href: "/dressage"}
+          Dressage
+      %md-tab
+        %a{href: "/western"}
+          Western
+      %md-tab
+        %a{href: "/eventing"}
+          Eventing
+      %md-tab
+        %a{href: "/endurance"}
+          Endurance
