--- a/app/views/admin/categories/_listed_top_level_category.haml
+++ b/app/views/admin/categories/_listed_top_level_category.haml
@@ -4,7 +4,7 @@
       .col-10.listed-category-col
         .row{:id => "top-level-category-#{category.display_name(I18n.locale).squish.downcase.tr(" ","_")}"}
           .col-12.listed-category-col
-            = category.display_name(I18n.locale)
+            = category.name_with_disciplines
       .col-2.listed-category-col
         = render :partial => "category_action_buttons", :locals => {category: category, category_count: category_count}
 
