--- a/app/views/admin/categories/form/_category_parent.haml
+++ b/app/views/admin/categories/form/_category_parent.haml
@@ -1,6 +1,8 @@
 - top_level_categories = @current_community.top_level_categories.reject { |c| c.id == @category.id }
-- if @category.children.empty? && top_level_categories.size > 0
-  .row
-    .col-12
+.row
+  .col-12
+    - if @category.children.empty? && top_level_categories.size > 0
       = form.label :parent_id, t(".category_parent")
       = form.select :parent_id, options_for_select([[t(".no_parent"), nil]] + top_level_categories.collect { |c| [c.display_name(I18n.locale), c.id] }, @category.parent_id)
+    = form.collection_check_boxes(:discipline_ids, Discipline.all, :id, :slug) do |discipline|
+      = discipline.label { discipline.check_box + discipline.text}
