--- a/app/views/listings/new.haml
+++ b/app/views/listings/new.haml
@@ -1,48 +1,48 @@
 - content_for :extra_javascript do 
   = javascript_include_tag "listings/new_listing/manifest"
 #new-listing.flex{"ng-controller": "newListingCtrl"}
-  .layout-row.layout-align-center-center
-    .layout-column.flex-gt-sm-66
-      %md-tabs{"md-stretch-tabs": "always", "md-center-tabs": true, "md-dynamic-height": "true", style: "background: #fff;"}
-        %md-tab{"ng-if": "false", style: "display:none;", label: "Payments"}
-          %md-content.md-padding
-            %h2.md-headline 
-              How can we pay you?
-              %span.md-caption
-                (You only have to do this once)
-            - content_for :javascript do
-              ST.initializeNewPaypalAccountHandler("ask_paypal_permissions", "#{order_permission_action}", ".js-paypal-redirect-order-permission");
-            - create_paypal_link = link_to(t("paypal_accounts.create_paypal_account_link_text"),
-                                           create_url, target: "_blank")
-            - paypal_redirect_link = "<a href='#' id='ask_paypal_permissions_redirect'>#{t("paypal_accounts.redirect_link_text")}</a>"
-            %p
-              You're almost ready to start selling! We need to set up how you'll get paid when users buy your items. Tack Hunter is seamlessly integrated with PayPal for security and simplicity. Once your account is connected you'll be able to list as many items as you want.
-            .row
-              .col-12.payment-checklist
-                %div
-                  %i.icon-check
-                  You'll receive your payments instantly
-                %div
-                  %i.icon-check
-                  Your private Paypal informantion is never shared with Tack Hunter
-                %div
-                  %i.icon-check
-                  We'll never debit your account, and our 3% fee is automatically subtracted from the buyers payment before it's sent to you. 
-                %div
-                  %i.icon-check
-                  Saddle trial didn't work out? You can easily issue refunds from Tack Hunter.
+  %md-tabs.md-hue-1{"md-center-tabs": true, "md-dynamic-height": "true", style: "background: #fff;"}
+    %md-tab{"ng-if": "false", style: "display:none;", label: "Payments"}
+      %md-content.md-padding
+        %h2.md-headline 
+          How can we pay you?
+          %span.md-caption
+            (You only have to do this once)
+        - content_for :javascript do
+          ST.initializeNewPaypalAccountHandler("ask_paypal_permissions", "#{order_permission_action}", ".js-paypal-redirect-order-permission");
+        - create_paypal_link = link_to(t("paypal_accounts.create_paypal_account_link_text"),
+                                       create_url, target: "_blank")
+        - paypal_redirect_link = "<a href='#' id='ask_paypal_permissions_redirect'>#{t("paypal_accounts.redirect_link_text")}</a>"
+        %p
+          You're almost ready to start selling! We need to set up how you'll get paid when users buy your items. Tack Hunter is seamlessly integrated with PayPal for security and simplicity. Once your account is connected you'll be able to list as many items as you want.
+        .row
+          .col-12.payment-checklist
+            %div
+              %i.icon-check
+              You'll receive your payments instantly
+            %div
+              %i.icon-check
+              Your private Paypal informantion is never shared with Tack Hunter
+            %div
+              %i.icon-check
+              We'll never debit your account, and our 3% fee is automatically subtracted from the buyers payment before it's sent to you. 
+            %div
+              %i.icon-check
+              Saddle trial didn't work out? You can easily issue refunds from Tack Hunter.
 
-            .row.send-button-wrapper
-              .col-12
-                %button#ask_paypal_permissions
-                  %i.icon-lock
-                  Securely connect your Paypal account
-              .row.js-paypal-redirect-order-permission.hidden
-                .col-12
-                  .paypal-redirect-message
-                    = t("paypal_accounts.redirect_message", redirect_link: paypal_redirect_link).html_safe
-        %md-tab{label: "Info"}
-          %md-content.bg-body
+        .row.send-button-wrapper
+          .col-12
+            %button#ask_paypal_permissions
+              %i.icon-lock
+              Securely connect your Paypal account
+          .row.js-paypal-redirect-order-permission.hidden
+            .col-12
+              .paypal-redirect-message
+                = t("paypal_accounts.redirect_message", redirect_link: paypal_redirect_link).html_safe
+    %md-tab{label: "Info"}
+      %md-content.bg-body.md-padding
+        .layout-row.layout-align-center-center
+          .layout-column.flex-gt-sm-66.layout-margin
             .md-whiteframe-z1.benefits-hero
               .layout-row
                 .flex
@@ -123,8 +123,10 @@
                       %md-option{"ng-repeat": "condition in conditions", value: "condition", "ng-bind": "condition"}
 
 
-        %md-tab{label: "Category"}
-          %md-content.bg-body
+    %md-tab{label: "Category"}
+      %md-content.bg-body.md-padding
+        .layout-row.layout-align-center-center
+          .layout-column.flex-gt-sm-66.layout-margin
             .md-whiteframe-z1
               %md-toolbar.md-hue-1
                 .md-toolbar-tools.flex
@@ -143,9 +145,9 @@
                     %md-radio-group{"ng-show": "categories", "ng-model": "listing.discipline_id"}
                       %md-radio-button{"ng-repeat": "option in categories", value: "{{option.url}}"}
                         {{option.url}}
-        %md-tab{label: "Pictures"}
+    %md-tab{label: "Pictures"}
 
-        %md-tab{label: "Preview"}
+    %md-tab{label: "Preview"}
 
 %md-button.progress-button.md-button.md-fab.md-fab-bottom-right{style: "position: fixed;"}
   Next
